hphp/hack/test/typecheck/unbound_name/user_attribute.php.exp
File "user_attribute.php", line 16, characters 5-12:
Unbound name: `NotFound` (an object type) (Naming[2049])
File "user_attribute.php", line 16, characters 5-12:
Unrecognized user attribute: `NotFound` does not have a class. Please declare a class for the attribute. (Naming[2049])
File "user_attribute.php", line 20, characters 5-5:
Unrecognized user attribute: `T` does not have a class. Please declare a class for the attribute. (Naming[2049])
File "user_attribute.php", line 24, characters 5-9:
Unrecognized user attribute: `Alias` does not have a class. Please declare a class for the attribute. (Naming[2049])
File "user_attribute.php", line 24, characters 5-9:
Expected a `class` but got a type alias. (Naming[2052])
  File "user_attribute.php", line 5, characters 6-10:
  Alias definition is here.
File "user_attribute.php", line 20, characters 5-5:
Erased generics can only be used in type hints because they do not exist at runtime. (Typing[4124])
File "user_attribute.php", line 20, characters 5-5:
Generics are not allowed in this position. (Typing[4306])
